# Rocket

./: .gitignore  Cargo.toml  README.md  docker-compose.test.yml
.Anotations/: Mapa Financeiro da Rocket.canvas  Rocket WebSite.canvas
.Anotations/.obsidian/: workspace.json
.Anotations/Textos/: Criação de Livros.md  Gerenciamento das Redes Sociais.md  Manejar Financeiro das Rifas.md  Manejar Planejamento de Datas.md  Manutenção dos produtos do site da Rocket Shop.md  Trazer novos Clientes para Contratar Serviços da Rocket.md
docs/: architecture.md  database.md  security.md
docs/modules/: auth.md  crypto.md  files.md  folders.md
files/public/css/: input.css  main.css  output.css
files/public/js/: apiClient.js  headerbar.js  lz4-decompressor.js  notificationManager.js  processImage.js  pushProfileImage.js
files/public/js/profile/: bannerManager.js  countryManager.js  dateOfBirthdayManager.js  emailManager.js  genderManager.js  imageManager.js  languageManager.js  messageManager.js  phoneManager.js  resetpasswordManager.js  rolesManager.js  userManager.js
files/public/pages/: 404.html  account.html  account_security.html  admin_setores.html  agendar.html  contact.html  create_company.html  drive.html  fileenvie.html  index.html  index_services.html  login-test.html  login.html
files/public/pages/rascunhos/: admin-schedules.html  basepage.html  chat.html  create_company.html  file-test.html  profile-test.html  todo.html
migrations/: 202510230001_initial_schema.sql  202510230002_business_tables.sql  202510230003_security_enhancements.sql  202510230004_autovacuum_config.sql  202510230005_storage_race_condition_fix.sql  202510230006_subscription_plans.sql.sql  202510230007_add_chunks_metadata_bytea.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs  statement_cache.rs
src/crypto/: aes.rs  csrf.rs  dek.rs  kek.rs
src/handlers/: auth.rs  files.rs  folders.rs
src/middleware_layer/: auth.rs  csrf.rs  rate_limit.rs
src/models/: file.rs  folder.rs  session.rs  user.rs
src/repositories/: file.rs  folder.rs  user.rs
src/services/: auth.rs  files.rs  folders.rs
src/validation/: auth.rs
tests/: integration_file_upload_e2e.rs
tools/: consolidate_directory.py  debug.sh  prompt_for_correct_code_implementation.txt  prompt_for_error_or_improvement_identification.txt  reset.sh
