[package]
name = "rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-br", "compression-zstd", "limit"] }
hyper = { version = "1", features = ["http2", "server"] }

# Database (tokio-postgres - 10x faster than SQLx)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = ["derive"] }

# Optimized allocator (15-20% performance boost)
jemallocator = { version = "0.5" }

# Redis
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.9"
argon2 = "0.5.3"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6"
blake3 = "1.8.2"
sha2 = "0.10.9"

# JSON (sonic-rs - 3x faster than serde_json)
sonic-rs = "0.5"
bincode = { version = "2.0.1" }

# Validation
garde = { version = "0.22", features = ["derive", "email"] }

# UUID and Time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }

# HTTP
http = "1"
futures = "0.3"
http-body-util = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
infer = "0.19"

# Rate limiting
tower_governor = "0.8.0"

# Encoding
hex = "0.4"
base64 = "0.22"

# Cookies
tower-cookies = { version = "0.11", features = ["axum-core"] }

# Async streams
tokio-util = { version = "0.7", features = ["io", "codec"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
incremental = false

[profile.production]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
