[package]
name = "rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-full", "limit"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
deadpool = "0.12.3"
postgres-types = { version = "0.2", features = ["derive"] }

# Redis
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "aio"] }

# Cryptography (AES-GCM específico)
aes-gcm = "0.10"
rand = "0.8.5"
argon2 = "0.5.3"

# Security - Zeroize for sensitive data
zeroize = { version = "1", features = ["derive"] }

# Security - Constant-time comparison
subtle = "2.6"

# JSON (sonic-rs) + serde para derives
sonic-rs = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }

# Validation (com feature email)
garde = { version = "0.22", features = ["derive", "email"] }

# UUID and Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
http = "1"
futures = "0.3"
http-body-util = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
infer = "0.19"

# Rate limiting
tower_governor = "0.8.0"

# Hex encoding
hex = "0.4"

# 🔥 BLAKE3 - 4x mais rápido que SHA256 (para integridade de arquivos)
blake3 = "1.8.2"

# Cookies
tower-cookies = { version = "0.11", features = ["axum-core"] }

# Base64 encoding for CSRF tokens and session serialization
base64 = "0.22"
sha2 = "0.10.9"

# ✅ Async streams for file streaming (NOVO - Para downloads streaming)
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde_json = "1.0"
once_cell = "1.18"